Script bd mas creacion de API - Pendiente de error

--- a/Backend/btomail/src/main/resources/application.properties
+++ b/Backend/btomail/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=7000
 
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/btomail
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
