--- a/Backend/btomail/pom.xml
+++ b/Backend/btomail/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.btomail</groupId>
 	<artifactId>btomail</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>btomail</name>
 	<description>Proyecto BTOmail</description>
 	<properties>
