--- a/Backend/btomail/src/main/resources/application.properties
+++ b/Backend/btomail/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7000
 
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/btomail
