--- a/Backend/btomail/pom.xml
+++ b/Backend/btomail/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.btomail</groupId>
 	<artifactId>btomail</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>btomail</name>
 	<description>Proyecto BTOmail</description>
@@ -36,6 +36,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
